# Generated by Django 3.2.4 on 2021-06-29 17:42

from django.db import migrations, models
import django.db.models.deletion
import phonenumber_field.modelfields


class Migration(migrations.Migration):

    dependencies = [
        ('core', '0005_comment'),
    ]

    operations = [
        migrations.CreateModel(
            name='Course',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(help_text='Enter Name of course', max_length=150, unique=True)),
                ('requirements', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='School',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(help_text='Enter Name of School', max_length=150, unique=True)),
                ('overview', models.TextField()),
                ('website', models.URLField(help_text='Enter scholarship application website', max_length=250, unique=True)),
            ],
        ),
        migrations.CreateModel(
            name='Scholarship',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(help_text='Enter Name of Scholarship', max_length=150, unique=True)),
                ('donor', models.CharField(blank=True, help_text='Enter Name of Scholarship Donor', max_length=150)),
                ('description', models.TextField()),
                ('image', models.ImageField(blank=True, null=True, upload_to='images/')),
                ('funding', models.CharField(choices=[('CHOOSE', '.....'), ('PARTIAL', 'Partial funding'), ('FULL', 'Fully funded')], default='.....', max_length=15, verbose_name='Type of funding')),
                ('degree_level', models.CharField(choices=[('CHOOSE', '.....'), ('UNDERGRADUATE', 'Undergraduates only'), ('MASTERS', 'Masters only'), ('DOCTORATE', 'PhD only'), ('ALL', 'All degrees')], default='.....', max_length=30)),
                ('amount', models.DecimalField(decimal_places=2, max_digits=8)),
                ('deadline', models.DateTimeField(verbose_name='Application deadline')),
                ('requirements', models.TextField(verbose_name='Application requirements')),
                ('date_published', models.DateTimeField()),
                ('contact', models.CharField(help_text='Enter full name of Contact person', max_length=250)),
                ('telephone', phonenumber_field.modelfields.PhoneNumberField(help_text='Enter phone number of Contact person', max_length=128, region=None)),
                ('email', models.EmailField(help_text='Enter email of Contact person', max_length=200, unique=True)),
                ('website', models.URLField(help_text='Enter scholarship application website', max_length=250, unique=True)),
                ('Institution', models.ForeignKey(default=1, on_delete=django.db.models.deletion.CASCADE, to='core.school')),
                ('course_name', models.ForeignKey(default=1, on_delete=django.db.models.deletion.CASCADE, to='core.course')),
            ],
            options={
                'ordering': ['-date_published'],
            },
        ),
        migrations.AddField(
            model_name='course',
            name='institution',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.school'),
        ),
    ]
